# fasta_explorer

./: README.md  compose.yaml
api/: Dockerfile  main.py  pyproject.toml
api/models/: __init__.py
web/: .dockerignore  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
web/components/: Upload.tsx
